--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,81 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family: 'Roboto Mono', monospace;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+/* COMMON */
+.container{
+    width: 100%;
+    height: 100vh;
+    position: relative;
+}
+
+.red{
+    background-color: red;
+}
+
+.green{
+    background-color: green;
+}
+
+.yellow{
+    background-color: yellow;
+}
+
+.text-yellow{
+    color: yellow;
+}
+
+.text-green{
+    color: green;
+}
+
+/* Centratura Immagine */
+.elements{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+img{
+    width: 100%;
+    height: 100%;
+}
+
+.text-top span, .text-bottom span{
+    display: block;
+    font-size: 70px;
+    text-align: center;
+}
+
+/* Interazione dinamica */
+.link-dinamico{
+    position: fixed;
+    top: 60px;
+    right: 0;
+}
+
+.link-dinamico ul{
+    text-align: center;
+}
+
+.link-dinamico ul li{
+    background-color: white;
+    border-radius: 50%;
+    display: inline-block;
+    margin: 0 20px;
+    width: 50px;
+    height: 50px;
+    padding: 4px 0;
+}
+
+.link-dinamico ul li a{
+    text-decoration: none;
+    color: black;
+    font-size: 30px;
+}
