--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,44 @@
     box-sizing: border-box;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body{
-    font-family: 'Roboto Mono', monospace;
+    font-family: 'Rubik Mono One';
     text-transform: uppercase;
     font-weight: bold;
+}
+
+/* NAV */
+nav{
+    position: fixed;
+    top: 35px;
+    right: 35px;
+    z-index: 1;
+}
+
+nav ul{
+    list-style-type: none;
+}
+
+nav li{
+    display: inline-block;
+    margin-left: 20px;
+}
+
+nav li a{
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    background-color: white;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 35px;
+    font-size: 15px;
+    text-decoration: none;
+    color: black;
 }
 
 /* COMMON */
@@ -44,6 +78,7 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    width: 40%;
 }
 
 img{
@@ -51,35 +86,7 @@ img{
     height: 100%;
 }
 
-.text-top span, .text-bottom span{
-    display: block;
+.text h2{
     font-size: 70px;
     text-align: center;
-}
-
-/* Interazione dinamica */
-.link-dinamico{
-    position: fixed;
-    top: 60px;
-    right: 0;
-}
-
-.link-dinamico ul{
-    text-align: center;
-}
-
-.link-dinamico ul li{
-    background-color: white;
-    border-radius: 50%;
-    display: inline-block;
-    margin: 0 20px;
-    width: 50px;
-    height: 50px;
-    padding: 4px 0;
-}
-
-.link-dinamico ul li a{
-    text-decoration: none;
-    color: black;
-    font-size: 30px;
 }
